argocd/bibi_web_server_ex1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: bibi-web-server-deployment
  labels:
        dep: bibi-web-server-deployment
spec:
  selector:
    matchLabels:
      app: web-app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-app
        app.kubernetes.io/name: bibi-web-server
    spec:
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: pvc
      containers:
      - name: bibi-ubuntu
        image: docker.io/bibiefrat/ubuntu:1.0.0
      - name: my-web-app
        image: bibiefrat/ci-cd-1:my-web-app
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8088
      - name: mongo
        image: bibiefrat/ci-cd-1:my-mongo
        args: ["--dbpath","/data/db"]
        livenessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: "mongo-data-dir"
            mountPath: "/data/db"
---
apiVersion: v1
kind: Service
metadata:
  name: bibi-web-server-service
spec:
  type: NodePort
  #type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: "http"
      port: 8088
      targetPort: 8088
      nodePort: 30080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bibi-ingress-network
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ubuntu # this can be omitted if there is a default ingress class:  kubectl get ingressclass ; kubectl describe ingressclass ubuntu
  rules:
    - host: bibi-web-server.info
      http:
        paths:
          - path: / # this is the path the ingress network will expose in order to get to internal service "<service-ip>:8088/"
            pathType: Prefix
            backend:
              service:
                name: bibi-web-server-service
                port:
                  number: 8088
